--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,21 @@ buildscript {
     }
 }
 
+plugins {
+    id "com.diffplug.gradle.spotless" version "3.6.0"
+}
+
+subprojects {
+    apply plugin: 'com.diffplug.gradle.spotless'
+    spotless {
+        kotlin {
+            target "**/*.kt"
+            ktlint("0.13.0")
+            licenseHeaderFile project.rootProject.file('spotless/Copyright.kt')
+        }
+    }
+}
+
 ext {
 
     versionCode = 1
