--- a/payjp/build.gradle
+++ b/payjp/build.gradle
@@ -32,6 +32,5 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit"
 
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    testImplementation "org.robolectric:robolectric:3.5.1"
 }
