--- a/sample-java/build.gradle
+++ b/sample-java/build.gradle
@@ -43,6 +43,7 @@ android {
 
 dependencies {
     implementation project(':payjp')
+    //implementation "jp.pay:payjp-android:0.1.0"
 
     implementation "com.android.support:appcompat-v7:$supportLib"
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
