--- a/sample-kotlin/build.gradle
+++ b/sample-kotlin/build.gradle
@@ -45,6 +45,7 @@ android {
 dependencies {
 
     implementation project(':payjp')
+    //implementation "jp.pay:payjp-android:0.1.0"
 
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation "com.android.support:appcompat-v7:$supportLib"
