--- a/payjp/build.gradle
+++ b/payjp/build.gradle
@@ -15,10 +15,13 @@ android {
         java.srcDirs += "src/${name}/kotlin"
     }
 
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 
     implementation "com.android.support:appcompat-v7:$supportLib"
 
@@ -30,6 +33,8 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit"
 
     testImplementation 'junit:junit:4.12'
+    testImplementation "org.robolectric:robolectric:3.5.1"
+    testImplementation "com.squareup.okhttp3:mockwebserver:$okHttp"
 }
 
 task dokkaJavadoc(type: org.jetbrains.dokka.gradle.DokkaTask) {
