--- a/sample-java/src/main/AndroidManifest.xml
+++ b/sample-java/src/main/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
   ~
-  ~ Copyright (c) 2017 PAY.JP (https://pay.jp)
-  ~ Copyright (c) 2017 BASE, Inc. (https://binc.jp/)
+  ~ Copyright (c) 2018 PAY, Inc.
   ~
   ~ Permission is hereby granted, free of charge, to any person obtaining a copy
   ~ of this software and associated documentation files (the "Software"), to deal
