--- a/sample-kotlin/build.gradle
+++ b/sample-kotlin/build.gradle
@@ -39,6 +39,23 @@ android {
     sourceSets.all {
         java.srcDirs += "src/${name}/kotlin"
     }
+
+    // for check release build
+    buildTypes {
+        debug {
+            debuggable true
+            minifyEnabled false
+            signingConfig signingConfigs.debug
+        }
+        release {
+            debuggable true
+            zipAlignEnabled true
+            shrinkResources true
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.debug
+        }
+    }
 }
 
 dependencies {
@@ -46,7 +63,7 @@ dependencies {
     implementation project(':payjp')
     //implementation "jp.pay:payjp-android:0.1.0"
 
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "com.android.support:appcompat-v7:$supportLib"
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
 }
