--- a/payjp/gradle-mvn-push.gradle
+++ b/payjp/gradle-mvn-push.gradle
@@ -39,6 +39,29 @@ def getRepositoryPassword() {
     return hasProperty('NEXUS_PASSWORD') ? NEXUS_PASSWORD : ""
 }
 
+def kotlinAndroidArtifactTasks() {
+    if (!project.plugins.hasPlugin('org.jetbrains.dokka-android')) {
+        throw new GradleException("Apply the dokka-android plugin in ${project.name}")
+    }
+
+    dokka {
+        outputFormat = 'html'
+        outputDirectory = "$buildDir/docs/kdoc"
+        sourceDirs = android.sourceSets.main.java.srcDirs
+    }
+
+    task docJar(type: Jar, dependsOn: dokka) {
+        classifier = 'javadoc'
+        from dokka.outputDirectory
+    }
+
+    task sourceJar(type: Jar) {
+        classifier = 'sources'
+        from android.sourceSets.main.java.srcDirs
+    }
+}
+
+
 afterEvaluate { project ->
     uploadArchives {
         repositories {
@@ -92,13 +115,10 @@ afterEvaluate { project ->
         sign configurations.archives
     }
 
-    task androidSourcesJar(type: Jar) {
-        classifier = 'sources'
-        from android.sourceSets.main.java.sourceFiles
-    }
+    kotlinAndroidArtifactTasks()
 
     artifacts {
-        archives androidSourcesJar
-        archives androidJavadocsJar
+        archives sourceJar
+        archives docJar
     }
 }
