--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,9 @@ captures/
 *.apk
 *.ap_
 *.jks
+
+!./.idea/codeStyles/codeStyleConfig.xml
+!/.idea/codeStyles/Project.xml
+!./.idea/inspectionProfiles/profiles_settings.xml
+!./.idea/inspectionProfiles/ktlint.xml
+!./.idea/workspace.xml
