--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: android
-
-jdk: oraclejdk8
+dist: trusty
 
 android:
   components:
@@ -15,11 +14,22 @@ android:
     - google-gdk-license-.+
 
 before_install:
-    - export TERM=dumb
-    - mkdir "$ANDROID_HOME/licenses" || true
-    - echo "d56f5187479451eabf01fb78af6dfcb131a6481e" > "$ANDROID_HOME/licenses/android-sdk-license"
-    - echo "84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
-    - ./gradlew androidDependencies
+  - export TERM=dumb
+  - mkdir "$ANDROID_HOME/licenses" || true
+  - cp ./.android-sdk-license "$ANDROID_HOME/licenses/android-sdk-license"
+  - ./gradlew androidDependencies
+
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -rf $HOME/.gradle/caches/*/plugin-resolution/
+  - rm -rf .gradle/
+
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
+    - $HOME/.android/build-cache
+    - .gradle
 
 script:
     - ./gradlew check
