--- a/sample-kotlin/build.gradle
+++ b/sample-kotlin/build.gradle
@@ -26,12 +26,12 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion rootProject.sdkVersion
 
     defaultConfig {
         applicationId "com.example.payjp.samplekotlin"
-        minSdkVersion rootProject.ext.minSdkVersion
-        targetSdkVersion rootProject.ext.targetSdkVersion
+        minSdkVersion rootProject.minSdkVersion
+        targetSdkVersion rootProject.sdkVersion
         versionCode 1
         versionName "1.0.0"
     }
