--- a/gradle.properties
+++ b/gradle.properties
@@ -28,6 +28,11 @@ org.gradle.parallel=true
 org.gradle.daemon=true
 org.gradle.configureondemand=true
 
+# android
+
+android.useAndroidX=true
+android.enableJetifier=true
+
 # Upload config
 
 GROUP=jp.pay
