--- a/payjp/build.gradle
+++ b/payjp/build.gradle
@@ -33,7 +33,7 @@ android {
         minSdkVersion rootProject.minSdkVersion
 
         consumerProguardFiles 'consumer-proguard-rules.pro'
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     sourceSets.all {
