--- a/sample-java/build.gradle
+++ b/sample-java/build.gradle
@@ -70,5 +70,5 @@ dependencies {
     implementation project(':payjp')
     //implementation "jp.pay:payjp-android:0.1.0"
 
-    implementation "com.android.support:appcompat-v7:$supportLib"
+    implementation 'androidx.appcompat:appcompat:1.0.2'
 }
