--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,11 @@ captures/
 !./.idea/inspectionProfiles/profiles_settings.xml
 !./.idea/inspectionProfiles/ktlint.xml
 !./.idea/workspace.xml
+
+vendor/bundle
+.bundle
+
+fastlane/report.xml
+fastlane/Preview.html
+fastlane/screenshots
+fastlane/test_output
