Revert "Comment branch filter on ci."
This reverts commit 083a75a1174b8aaf20a5d406c05261666dc42b84.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,6 +81,6 @@ workflows:
       - create_pr_to_public:
           requires:
             - build
-          # filters:
-          #     branches:
-          #       only: master
+          filters:
+              branches:
+                only: master
