Add cardformview test with robolectric 4.

--- a/gradle.properties
+++ b/gradle.properties
@@ -32,6 +32,8 @@ org.gradle.configureondemand=true
 
 android.useAndroidX=true
 android.enableJetifier=true
+android.enableUnitTestBinaryResources=true
+
 
 # Upload config
 
