--- a/payjp/build.gradle
+++ b/payjp/build.gradle
@@ -42,7 +42,10 @@ android {
     }
 
     testOptions {
-        unitTests.returnDefaultValues = true
+        unitTests {
+            returnDefaultValues = true
+            includeAndroidResources = true
+        }
     }
 }
 
@@ -60,8 +63,11 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     testImplementation 'junit:junit:4.12'
-    testImplementation "org.robolectric:robolectric:3.8"
+    testImplementation "androidx.test:core:1.2.0"
+    testImplementation "androidx.test.ext:junit:1.1.1"
+    testImplementation "org.robolectric:robolectric:4.3"
     testImplementation "com.squareup.okhttp3:mockwebserver:$okHttp"
+    testImplementation "org.mockito:mockito-core:2.28.2"
 }
 
 apply from: 'gradle-mvn-push.gradle'
