--- a/payjp/build.gradle
+++ b/payjp/build.gradle
@@ -59,8 +59,14 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$retrofit"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit"
 
-    implementation "com.google.android.material:material:1.0.0"
+    implementation 'androidx.fragment:fragment:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.1.0-rc01"
+    kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle"
+    implementation "com.google.android.material:material:1.0.0"
 
     testImplementation 'junit:junit:4.12'
     testImplementation "androidx.test:core:1.2.0"
