--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -29,7 +29,7 @@ android {
     compileSdkVersion rootProject.sdkVersion
 
     defaultConfig {
-        applicationId "com.example.payjp.samplekotlin"
+        applicationId "com.example.payjp.sample"
         minSdkVersion 16
         targetSdkVersion rootProject.sdkVersion
         versionCode 1
