--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.payjp.samplekotlin">
+    package="com.example.payjp.sample">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
