Move java sample.

--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -45,6 +45,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".GenerateTokenSampleActivity" />
+        <activity android:name=".GenerateTokenSampleJavaActivity" />
         <activity android:name=".CardFormViewSampleActivity" />
     </application>
 
