Add card form sample by java.

--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -47,6 +47,7 @@
         <activity android:name=".GenerateTokenSampleActivity" />
         <activity android:name=".GenerateTokenSampleJavaActivity" />
         <activity android:name=".CardFormViewSampleActivity" />
+        <activity android:name=".CardFormViewSampleJavaActivity" />
     </application>
 
 </manifest>
