--- a/payjp-android-cardio/build.gradle
+++ b/payjp-android-cardio/build.gradle
@@ -29,7 +29,7 @@ android {
     compileSdkVersion rootProject.sdkVersion
 
     defaultConfig {
-        minSdkVersion 16
+        minSdkVersion rootProject.minSdkVersion
     }
 
     sourceSets.all {
