--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -30,7 +30,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.payjp.sample"
-        minSdkVersion 16
+        minSdkVersion rootProject.minSdkVersion
         targetSdkVersion rootProject.sdkVersion
         versionCode 1
         versionName "1.0.0"
