--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -68,8 +68,11 @@ dependencies {
     implementation project(':payjp')
     //implementation "jp.pay:payjp-android:0.1.0"
     implementation project(':payjp-android-cardio')
+    implementation project(':payjp-android-coroutine')
 
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0-RC2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0-RC2'
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
