--- a/gradle/dependencies-test.gradle
+++ b/gradle/dependencies-test.gradle
@@ -21,34 +21,10 @@
  * SOFTWARE.
  */
 
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-android'
-
-apply from: rootProject.file("gradle/dependencies-test.gradle")
-
-android {
-    compileSdkVersion rootProject.sdkVersion
-
-    defaultConfig {
-        minSdkVersion rootProject.minSdkVersion
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
-
-    sourceSets.all {
-        java.srcDirs += "src/${name}/kotlin"
-    }
-
-    testOptions {
-        unitTests {
-            returnDefaultValues = true
-            includeAndroidResources = true
-        }
-    }
-}
-
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0-RC2'
-    implementation project(':payjp')
+    testImplementation 'junit:junit:4.12'
+    testImplementation "androidx.test:core:1.2.0"
+    testImplementation "androidx.test.ext:junit:1.1.1"
+    testImplementation "org.robolectric:robolectric:4.3"
+    testImplementation "org.mockito:mockito-core:2.28.2"
 }
