--- a/gradle/dependencies-test.gradle
+++ b/gradle/dependencies-test.gradle
@@ -26,5 +26,5 @@ dependencies {
     testImplementation "androidx.test:core:1.2.0"
     testImplementation "androidx.test.ext:junit:1.1.1"
     testImplementation "org.robolectric:robolectric:4.3"
-    testImplementation "org.mockito:mockito-core:2.28.2"
+    testImplementation "org.mockito:mockito-core:$mockito"
 }
