--- a/payjp/build.gradle
+++ b/payjp/build.gradle
@@ -71,6 +71,7 @@ dependencies {
     implementation "com.google.android.material:material:1.0.0"
 
     testImplementation "com.squareup.okhttp3:mockwebserver:$okHttp"
+    testImplementation project(":common-test")
 }
 
 apply from: 'gradle-mvn-push.gradle'
