Fix test build error.

--- a/common-test/build.gradle
+++ b/common-test/build.gradle
@@ -30,6 +30,11 @@ android {
     defaultConfig {
         minSdkVersion rootProject.minSdkVersion
     }
+
+    lintOptions {
+        abortOnError false
+        disable ['InvalidPackage']
+    }
 }
 
 dependencies {
