Update Android Studio 3.4.2 -> 3.5

--- a/gradle.properties
+++ b/gradle.properties
@@ -27,13 +27,19 @@ org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryErro
 org.gradle.parallel=true
 org.gradle.daemon=true
 org.gradle.configureondemand=true
+org.gradle.caching=true
 
 # android
 
 android.useAndroidX=true
 android.enableJetifier=true
 android.enableUnitTestBinaryResources=true
+android.testConfig.useRelativePath=true
 
+kotlin.parallel.tasks.in.project=true
+kapt.incremental.apt=true
+kapt.use.worker.api=true
+kapt.include.compile.classpath=false
 
 # Upload config
 
