--- a/payjp/build.gradle
+++ b/payjp/build.gradle
@@ -61,14 +61,14 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$retrofit"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit"
 
-    implementation 'androidx.fragment:fragment:1.0.0'
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.fragment:fragment:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.1.0-rc01"
-    kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle"
-    implementation "com.google.android.material:material:1.0.0"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.1.0"
+    kapt "androidx.lifecycle:lifecycle-common-java8:$lifecycle"
+    implementation "com.google.android.material:material:1.1.0-alpha10"
 
     testImplementation "com.squareup.okhttp3:mockwebserver:$okHttp"
     testImplementation project(":common-test")
