--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -73,9 +73,9 @@ dependencies {
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0-RC2'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0-RC2'
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0-alpha10'
 
     // card scan
     implementation 'io.card:android-sdk:5.5.1'
