--- a/payjp-android-cardio/build.gradle
+++ b/payjp-android-cardio/build.gradle
@@ -40,6 +40,6 @@ android {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     api project(':payjp')
-    implementation 'io.card:android-sdk:5.5.1'
-    implementation 'androidx.fragment:fragment:1.1.0'
+    implementation "io.card:android-sdk:$cardio"
+    implementation "androidx.fragment:fragment:$fragment"
 }
