--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -71,12 +71,12 @@ dependencies {
     implementation project(':payjp-android-coroutine')
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0-RC2'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0-RC2'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine"
+    implementation "androidx.appcompat:appcompat:$appcompat"
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    implementation 'com.google.android.material:material:1.1.0-alpha10'
+    implementation "com.google.android.material:material:$material"
 
     // card scan
-    implementation 'io.card:android-sdk:5.5.1'
+    implementation "io.card:android-sdk:$cardio"
 }
