--- a/payjp-android-coroutine/gradle.properties
+++ b/payjp-android-coroutine/gradle.properties
@@ -1,6 +1,6 @@
 #
 #
-# Copyright (c) 2018 PAY, Inc.
+# Copyright (c) 2019 PAY, Inc.
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to deal
@@ -21,8 +21,8 @@
 # SOFTWARE.
 #
 
-# payjp-android
-POM_DESCRIPTION=Payjp client for android
-POM_NAME=payjp-andorid
-POM_ARTIFACT_ID=payjp-android
+# payjp-android-coroutine
+POM_DESCRIPTION=Payjp Kotlin coroutine plugin
+POM_NAME=payjp-andorid-coroutine
+POM_ARTIFACT_ID=payjp-android-coroutine
 POM_PACKAGING=aar
