--- a/gradle.properties
+++ b/gradle.properties
@@ -57,3 +57,5 @@ POM_LICENCE_DIST=repo
 POM_DEVELOPER_ID=payjp
 POM_DEVELOPER_NAME=PAY.JP
 POM_DEVELOPER_EMAIL=support@pay.jp
+
+VERSION_NAME=0.5.0-SNAPSHOT
