--- a/gradle/gradle-mvn-push.gradle
+++ b/gradle/gradle-mvn-push.gradle
@@ -18,7 +18,7 @@ apply plugin: 'maven'
 apply plugin: 'signing'
 
 def isReleaseBuild() {
-    return VERSION_NAME.contains("SNAPSHOT") == false
+    return !VERSION_NAME.contains("SNAPSHOT")
 }
 
 def getReleaseRepositoryUrl() {
@@ -51,12 +51,12 @@ def kotlinAndroidArtifactTasks() {
     }
 
     task docJar(type: Jar, dependsOn: dokka) {
-        classifier = 'javadoc'
+        archiveClassifier.set('javadoc')
         from dokka.outputDirectory
     }
 
     task sourceJar(type: Jar) {
-        classifier = 'sources'
+        archiveClassifier.set('sources')
         from android.sourceSets.main.java.srcDirs
     }
 }
