--- a/build.gradle
+++ b/build.gradle
@@ -77,6 +77,6 @@ allprojects {
     repositories {
         google()
         jcenter()
-        //maven { url "https://oss.sonatype.org/content/groups/public/" }
+        maven { url "https://oss.sonatype.org/content/groups/public/" }
     }
 }
