--- a/gradle/gradle-mvn-push.gradle
+++ b/gradle/gradle-mvn-push.gradle
@@ -1,5 +1,6 @@
 /*
  * Copyright 2013 Chris Banes
+ * Copyright 2019 PAY, Inc.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -104,6 +105,13 @@ afterEvaluate { project ->
                             id POM_DEVELOPER_ID
                             name POM_DEVELOPER_NAME
                         }
+                    }
+                }
+
+                pom.whenConfigured { pom ->
+                    pom.dependencies.findAll { dep -> dep.groupId == rootProject.name }.collect { dep ->
+                        dep.groupId = pom.groupId = project.GROUP
+                        dep.version = pom.version = project.VERSION_NAME
                     }
                 }
             }
