--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -66,9 +66,11 @@ android {
 dependencies {
 
     implementation project(':payjp')
-    //implementation "jp.pay:payjp-android:0.1.0"
     implementation project(':payjp-android-cardio')
     implementation project(':payjp-android-coroutine')
+//    implementation "jp.pay:payjp-android:$VERSION_NAME"
+//    implementation "jp.pay:payjp-android-cardio:$VERSION_NAME"
+//    implementation "jp.pay:payjp-android-coroutine:$VERSION_NAME"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine"
