--- a/documentation/build.gradle
+++ b/documentation/build.gradle
@@ -1,6 +1,6 @@
 /*
  *
- * Copyright (c) 2018 PAY, Inc.
+ * Copyright (c) 2019 PAY, Inc.
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -20,5 +20,26 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  * SOFTWARE.
  */
+apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
+apply plugin: 'org.jetbrains.dokka-android'
 
-include ':payjp', ':sample', ':payjp-android-cardio', ':payjp-android-coroutine', ':common-test', ':documentation'
+android {
+    compileSdkVersion rootProject.sdkVersion
+
+    defaultConfig {
+        minSdkVersion rootProject.minSdkVersion
+    }
+}
+
+dokka {
+    moduleName = rootProject.name
+    outputFormat = 'javadoc'
+    outputDirectory = rootProject.file('docs')
+    sourceDirs = [
+            rootProject.file("payjp/src/main/kotlin"),
+            rootProject.file("payjp-android-cardio/src/main/kotlin"),
+            rootProject.file("payjp-android-coroutine/src/main/kotlin")
+    ]
+    includeNonPublic = false
+}
