--- a/payjp/build.gradle
+++ b/payjp/build.gradle
@@ -23,6 +23,7 @@
 
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'org.jetbrains.dokka-android'
 
@@ -49,6 +50,9 @@ android {
             returnDefaultValues = true
             includeAndroidResources = true
         }
+    }
+    androidExtensions {
+        experimental = true
     }
 }
 
