--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -52,6 +52,10 @@
         <activity
             android:name="jp.pay.android.ui.PayjpCardFormActivity"
             android:theme="@style/Material.Filled" />
+
+        <activity
+            android:name="com.facebook.flipper.android.diagnostics.FlipperDiagnosticActivity"
+            android:exported="true"/>
     </application>
 
 </manifest>
