Set up sample backend api.

--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -24,6 +24,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion rootProject.sdkVersion
@@ -81,6 +82,14 @@ dependencies {
 
     // card scan
     implementation "io.card:android-sdk:$cardio"
+
+    // api
+    implementation "com.squareup.okhttp3:okhttp:$okHttp"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okHttp"
+    implementation "com.squareup.moshi:moshi:$moshi"
+    kapt "com.squareup.moshi:moshi-kotlin-codegen:$moshi"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit"
+    implementation "com.squareup.retrofit2:converter-moshi:$retrofit"
 
     // debug
     implementation 'com.facebook.flipper:flipper:0.28.0'
