--- a/build.gradle
+++ b/build.gradle
@@ -64,7 +64,8 @@ ext {
     coroutine = "1.3.1"
     appcompat = "1.1.0"
     fragment = "1.1.0"
-    material = "1.1.0-alpha10"
+    material = "1.2.0-alpha02"
+    constraint = "2.0.0-beta3"
     cardio = "5.5.1"
 }
 
