--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,7 @@ ext {
     fragment = "1.1.0"
     material = "1.2.0-alpha02"
     constraint = "2.0.0-beta3"
+    recyclerview = "1.1.0"
     cardio = "5.5.1"
 }
 
