--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -77,7 +77,7 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine"
     implementation "androidx.appcompat:appcompat:$appcompat"
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation "androidx.recyclerview:recyclerview:$recyclerview"
     implementation "com.google.android.material:material:$material"
 
     // card scan
@@ -91,9 +91,8 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$retrofit"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit"
 
+    implementation 'com.google.android.gms:play-services-base:17.1.0'
+
     // debug
-    implementation 'com.facebook.flipper:flipper:0.28.0'
-    implementation 'com.facebook.flipper:flipper-network-plugin:0.28.0'
-    implementation 'com.facebook.soloader:soloader:0.8.0'
     implementation 'com.squareup.leakcanary:leakcanary-android:2.0-beta-5'
 }
