--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
+fastlane/console_output.log
+fastlane/gcloud-client-secret.json
