--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -26,6 +26,17 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
+apply plugin: 'com.google.firebase.appdistribution'
+
+buildscript {
+    repositories {
+        google()
+    }
+    dependencies {
+        classpath 'com.google.firebase:firebase-appdistribution-gradle:1.3.0'
+    }
+}
+
 android {
     compileSdkVersion rootProject.sdkVersion
 
@@ -33,8 +44,12 @@ android {
         applicationId "com.example.payjp.sample"
         minSdkVersion rootProject.minSdkVersion
         targetSdkVersion rootProject.sdkVersion
-        versionCode 1
-        versionName "1.0.0"
+        versionCode rootProject.numberOfCommits
+        versionName VERSION_NAME
+
+        firebaseAppDistribution {
+            groups="internal-tester"
+        }
     }
 
     sourceSets.all {
@@ -61,6 +76,11 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    dexOptions {
+        // Skip pre-dexing when running on CI or when disabled via -Dpre-dex=false.
+        preDexLibraries = preDexEnabled && !isCi
     }
 }
 
@@ -95,4 +115,15 @@ dependencies {
 
     // debug
     implementation 'com.squareup.leakcanary:leakcanary-android:2.0-beta-5'
+}
+
+apply plugin: 'com.google.gms.google-services'
+
+android.applicationVariants.all { variant ->
+    // Remove google services plugin if credential does not exists.
+    project.tasks.each { t ->
+        if (t.name.toLowerCase().contains("googleservices")) {
+            t.enabled = project.file("google-services.json").exists()
+        }
+    }
 }
