--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ shared_build_steps:
   - run: &set_env
       command: |
         echo "export REPOSITORY_ROOT=$(git rev-parse --show-toplevel)" >> $BASH_ENV
-        echo "source scripts/bash.source" >> $BASH_ENV
+        echo "source $CIRCLE_WORKING_DIRECTORY/scripts/bash.source" >> $BASH_ENV
         source $BASH_ENV
   - run: &update_sdk
       name: Update Android SDK
