--- a/payjp-android-cardform/build.gradle
+++ b/payjp-android-cardform/build.gradle
@@ -52,10 +52,14 @@ android {
             includeAndroidResources = true
         }
     }
+
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation project(':payjp-android-core')
 
     implementation "androidx.fragment:fragment:$fragment"
@@ -63,7 +67,7 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:$recyclerview"
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.1.0"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
     kapt "androidx.lifecycle:lifecycle-common-java8:$lifecycle"
     implementation "com.google.android.material:material:$material"
     implementation "androidx.constraintlayout:constraintlayout:$constraint"
