--- a/payjp-android-main/build.gradle
+++ b/payjp-android-main/build.gradle
@@ -41,10 +41,14 @@ android {
     sourceSets.all {
         java.srcDirs += "src/${name}/kotlin"
     }
+
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     api project(':payjp-android-core')
     api project(':payjp-android-cardform')
 }
