--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -33,7 +33,7 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.google.firebase:firebase-appdistribution-gradle:1.3.0'
+        classpath 'com.google.firebase:firebase-appdistribution-gradle:1.3.1'
     }
 }
 
@@ -93,7 +93,7 @@ dependencies {
 //    implementation "jp.pay:payjp-android-cardio:$VERSION_NAME"
 //    implementation "jp.pay:payjp-android-coroutine:$VERSION_NAME"
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine"
     implementation "androidx.appcompat:appcompat:$appcompat"
