--- a/payjp-android-verifier/build.gradle
+++ b/payjp-android-verifier/build.gradle
@@ -72,6 +72,7 @@ dependencies {
 
     implementation "androidx.webkit:webkit:1.2.0"
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-beta01"
+    implementation "androidx.browser:browser:1.2.0"
 
     testImplementation project(":common-test")
 }
