--- a/payjp-android-cardform/build.gradle
+++ b/payjp-android-cardform/build.gradle
@@ -25,6 +25,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'org.jetbrains.dokka-android'
+apply plugin: 'kotlin-android-extensions'
 
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
 apply from: rootProject.file("gradle/dependencies-test.gradle")
@@ -55,6 +56,10 @@ android {
 
     kotlinOptions {
         jvmTarget = "1.8"
+    }
+
+    androidExtensions {
+        features = ["parcelize"]
     }
 }
 
