--- a/payjp-android-core/build.gradle
+++ b/payjp-android-core/build.gradle
@@ -55,6 +55,10 @@ android {
     kotlinOptions {
         jvmTarget = "1.8"
     }
+
+    androidExtensions {
+        features = ["parcelize"]
+    }
 }
 
 dependencies {
