--- a/gradle.properties
+++ b/gradle.properties
@@ -57,4 +57,4 @@ POM_DEVELOPER_ID=payjp
 POM_DEVELOPER_NAME=PAY.JP
 POM_DEVELOPER_EMAIL=support@pay.jp
 
-VERSION_NAME=1.2.0-SNAPSHOT
+VERSION_NAME=1.2.0
