--- a/documentation/build.gradle
+++ b/documentation/build.gradle
@@ -22,7 +22,7 @@
  */
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'org.jetbrains.dokka-android'
+apply plugin: 'org.jetbrains.dokka'
 
 android {
     compileSdkVersion rootProject.sdkVersion
@@ -33,15 +33,28 @@ android {
 }
 
 dokka {
-    moduleName = rootProject.name
     outputFormat = 'javadoc'
     outputDirectory = rootProject.file('docs')
-    sourceDirs = [
-            rootProject.file("payjp-android-core/src/main/kotlin"),
-            rootProject.file("payjp-android-cardform/src/main/kotlin"),
-            rootProject.file("payjp-android-main/src/main/kotlin"),
-            rootProject.file("payjp-android-cardio/src/main/kotlin"),
-            rootProject.file("payjp-android-coroutine/src/main/kotlin")
-    ]
-    includeNonPublic = false
+    configuration {
+        moduleName = rootProject.name
+        sourceRoot {
+            path = rootProject.file("payjp-android-core/src/main/kotlin").path
+        }
+        sourceRoot {
+            path = rootProject.file("payjp-android-cardform/src/main/kotlin").path
+        }
+        sourceRoot {
+            path = rootProject.file("payjp-android-main/src/main/kotlin").path
+        }
+        sourceRoot {
+            path = rootProject.file("payjp-android-cardio/src/main/kotlin").path
+        }
+        sourceRoot {
+            path = rootProject.file("payjp-android-coroutine/src/main/kotlin").path
+        }
+        sourceRoot {
+            path = rootProject.file("payjp-android-verifier/src/main/kotlin").path
+        }
+        includeNonPublic = false
+    }
 }
