--- a/payjp-android-cardio/build.gradle
+++ b/payjp-android-cardio/build.gradle
@@ -23,7 +23,7 @@
 
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'org.jetbrains.dokka-android'
+apply plugin: 'org.jetbrains.dokka'
 
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
 
