--- a/documentation/build.gradle
+++ b/documentation/build.gradle
@@ -30,6 +30,10 @@ android {
     defaultConfig {
         minSdkVersion rootProject.minSdkVersion
     }
+
+    buildFeatures {
+        buildConfig = false
+    }
 }
 
 dokka {
