--- a/documentation/build.gradle
+++ b/documentation/build.gradle
@@ -24,17 +24,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'org.jetbrains.dokka'
 
-android {
-    compileSdkVersion rootProject.sdkVersion
-
-    defaultConfig {
-        minSdkVersion rootProject.minSdkVersion
-    }
-
-    buildFeatures {
-        buildConfig = false
-    }
-}
+apply from: rootProject.file("gradle/android-common.gradle")
 
 dokka {
     outputFormat = 'javadoc'
