--- a/payjp-android-cardform/build.gradle
+++ b/payjp-android-cardform/build.gradle
@@ -29,37 +29,14 @@ apply plugin: 'kotlin-android-extensions'
 
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
 apply from: rootProject.file("gradle/dependencies-test.gradle")
+apply from: rootProject.file("gradle/android-common.gradle")
 
 android {
-    compileSdkVersion rootProject.sdkVersion
-
-    defaultConfig {
-        minSdkVersion rootProject.minSdkVersion
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
-
-    sourceSets.all {
-        java.srcDirs += "src/${name}/kotlin"
-    }
-
-    testOptions {
-        unitTests {
-            returnDefaultValues = true
-            includeAndroidResources = true
-        }
-    }
-
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
-
     androidExtensions {
         features = ["parcelize"]
     }
 
     buildFeatures {
-        buildConfig = false
         viewBinding = true
     }
 }
