--- a/payjp-android-core/build.gradle
+++ b/payjp-android-core/build.gradle
@@ -29,35 +29,19 @@ apply plugin: 'org.jetbrains.dokka'
 
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
 apply from: rootProject.file("gradle/dependencies-test.gradle")
+apply from: rootProject.file("gradle/android-common.gradle")
 
 android {
-    compileSdkVersion rootProject.sdkVersion
-
     defaultConfig {
-        minSdkVersion rootProject.minSdkVersion
         versionName VERSION_NAME
-
         consumerProguardFiles 'consumer-proguard-rules.pro'
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
-
-    sourceSets.all {
-        java.srcDirs += "src/${name}/kotlin"
-    }
-
-    testOptions {
-        unitTests {
-            returnDefaultValues = true
-            includeAndroidResources = true
-        }
-    }
-
-    kotlinOptions {
-        jvmTarget = "1.8"
     }
 
     androidExtensions {
         features = ["parcelize"]
+    }
+    buildFeatures {
+        buildConfig = true
     }
 }
 
