--- a/payjp-android-main/build.gradle
+++ b/payjp-android-main/build.gradle
@@ -26,26 +26,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'org.jetbrains.dokka'
 
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
-
-android {
-    compileSdkVersion rootProject.sdkVersion
-
-    defaultConfig {
-        minSdkVersion rootProject.minSdkVersion
-    }
-
-    sourceSets.all {
-        java.srcDirs += "src/${name}/kotlin"
-    }
-
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
-
-    buildFeatures {
-        buildConfig = false
-    }
-}
+apply from: rootProject.file("gradle/android-common.gradle")
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
