--- a/payjp-android-verifier/build.gradle
+++ b/payjp-android-verifier/build.gradle
@@ -28,35 +28,10 @@ apply plugin: 'org.jetbrains.dokka'
 
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
 apply from: rootProject.file("gradle/dependencies-test.gradle")
+apply from: rootProject.file("gradle/android-common.gradle")
 
 android {
-    compileSdkVersion rootProject.sdkVersion
-
-    defaultConfig {
-        minSdkVersion rootProject.minSdkVersion
-        versionName VERSION_NAME
-
-        consumerProguardFiles 'consumer-rules.pro'
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
-
-    sourceSets.all {
-        java.srcDirs += "src/${name}/kotlin"
-    }
-
-    testOptions {
-        unitTests {
-            returnDefaultValues = true
-            includeAndroidResources = true
-        }
-    }
-
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
-
     buildFeatures {
-        buildConfig = false
         viewBinding = true
     }
 }
