--- a/payjp-android-core/build.gradle
+++ b/payjp-android-core/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     kapt "com.squareup.moshi:moshi-kotlin-codegen:$moshi"
     implementation "com.squareup.retrofit2:retrofit:$retrofit"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit"
+    implementation "androidx.annotation:annotation:$annotation"
 
     testImplementation "com.squareup.okhttp3:mockwebserver:$okHttp"
     testImplementation project(":common-test")
