Move package from Android manifest to build files
(as Android Studio recommended)

--- a/payjp-android-cardform/src/main/AndroidManifest.xml
+++ b/payjp-android-cardform/src/main/AndroidManifest.xml
@@ -21,8 +21,7 @@
   ~ SOFTWARE.
   -->
 
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        package="jp.pay.android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application>
         <activity
