--- a/payjp-android-cardio/build.gradle
+++ b/payjp-android-cardio/build.gradle
@@ -34,3 +34,7 @@ dependencies {
     implementation "io.card:android-sdk:$cardio"
     implementation "androidx.fragment:fragment:$fragment"
 }
+
+android {
+    namespace 'jp.pay.android.cardio'
+}
