--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -38,6 +38,7 @@ buildscript {
 }
 
 android {
+    namespace 'com.example.payjp.sample'
     compileSdkVersion rootProject.sdkVersion
 
     defaultConfig {
