--- a/common-test/build.gradle
+++ b/common-test/build.gradle
@@ -31,6 +31,7 @@ android {
         abortOnError false
         disable['InvalidPackage']
     }
+    namespace 'jp.pay.android'
 }
 
 dependencies {
