--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -30,7 +30,7 @@ apply plugin: 'com.google.firebase.appdistribution'
 buildscript {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.google.firebase:firebase-appdistribution-gradle:2.0.0'
